fixed overflowing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,6 +227,11 @@ h2 { margin: 1.5vh 0 1vh; }
 }
 
 /* Card Grid -------------------------------------------------------------- */
+.card-grid-container {
+  max-height: 100%;       /* Adjust based on design */
+  overflow-y: auto;
+}
+
 .card-grid {
   display: grid;
   max-width: 70vw;
